# matsimx

./: .gitignore  README.md  pyproject.toml
cifs/: Mg2GeO4.cif
crystal/: main.ipynb
docs/: install_matcalc.md  install_matcalc.txt
matcalc/: install.txt  matcalc.ipynb  requirements.txt
matcalc/example/: phonon_Zn(FeO2)2_fd3m.ipynb  relax.ipynb  surface_energy.ipynb
matcalc/example/output/: ZFO_phonon.yaml  ZFO_phonon_bs.yaml
matcalc/example/structures/: Zn(FeO2)2_fd3m.cif  gen_35.cif
matcalc/ferrite/v1/: MZLFO.ipynb  Mn0.2Zn0.8(FeO2)2.cif  use.py
matcalc/ferrite/v2_mp/: MZLFO.ipynb
matcalc/output/: samples_summary.txt
matcalc/output/bandgap3.5b1-Fe2CoO4-Fe2CoO4/: POSCAR-pbe  POSCAR-r2scan  pbe_phonon.yaml  pbe_phonon_bs.yaml  r2scan_phonon.yaml  r2scan_phonon_bs.yaml
matcalc/output/bandgap3.5b1-Zn(FeO2)2-Zn(FeO2)2/: POSCAR_r2scan  r2scan_phonon_bs.yaml
matcalc/output/bandgap3.5b1-gen_0-NaTiSi2O7/: POSCAR-pbe  r2scan_phonon.yaml  r2scan_phonon_bs.yaml
matcalc/output/bandgap3.5b1-gen_1-Na6SO2/: POSCAR_pbe  POSCAR_r2scan  r2scan_phonon_bs.yaml
matcalc/wide_sem/: matcalc.ipynb
matter/: command.txt  pipeline.txt
matter/bandgap3.5b1/: generated_crystals.extxyz
matter/matcalc/: matcalc.ipynb
matter_gen/: command.txt  note.txt
mcsq/MnZn_sup/: pos2cif.ipynb
output/bandgap3.5b2/: generated_crystals.extxyz
qe/Mn0.25/: Mn0.25Zn0.75(FeO2)2.cif  QE.ipynb  espresso.pwi  espresso.pwo  pwscf.in  pwscf.out
sqs/sqsgen/: main.ipynb  sqs-0-0.cif
sqsgen/: Zn(FeO2)2_fd_relaxed.cif  Zn(FeO2)2_fd_relaxed.pymatgen.json  sqs.json  sqs.mpack
(+431 files in other folders)
