[project]
name = "matsimx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crystal-toolkit>=2025.7.31",
    "ipywidgets>=8.1.7",
    "jupyterlab>=3.6.8",
    "mace-torch>=0.3.14",
    "matcalc>=0.4.3",
    "matgl>=1.3.0",
    "seekpath>=2.1.0",
]
